--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,11 @@ table {
     cursor: pointer;                    
 }
 
+#numberOfEmployees {
+    padding-left: 20px;
+    font-weight: 600;
+}
+
 td:nth-child(n+5) { 
     width: 10px;
 }
