--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -43,3 +43,11 @@ td:nth-child(n+5) {
 tr:nth-child(1) {                         
     font-weight: 600;   
 }
+
+.error {
+    border: solid 1px red !important;
+}
+
+.errorText {
+    color: red;
+}
